@@ -1,3 +1,10 @@
+2001-11-23  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/ewmh_names.c (convert_charsets):
+	-Wall fix: 2nd parameter of iconv is char **, not const char ** as the
+	man page states on Linux
+	replaced goto with a loop
+
 2001-11-22  olicha  <olivier.chapuis@free.fr>
 
 	* fvwm/ewmh_icons.c (EWMH_SetWmIconFromPixmap):
@@ -66,7 +73,7 @@
 	* fvwm/ewmh.h:
 	* fvwm/ewmh.c:
 	fixed EWMH_WindowDestroyed and EWMH_DestroyWindow macros
-	
+
 2001-11-15  olicha  <olivier.chapuis@free.fr>
 
 	* fvwm/ewmh.{c,h} (EWMH_DestroyWindow):
@@ -196,7 +203,7 @@
 	(CMD_GotoDeskAndPage):
 	(do_move_window_to_desk):
 	EWMH_SetCurrentDesk, EWMH_SetWMDesktop
-	
+
 2001-11-10  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/update.c (apply_window_updates):
